# automation_hub

./: .env.example  .gitignore  .prd-registry.json  CLAUDE.md  Dockerfile.monitor  README.md  docker-compose.yml  package-lock.json  pyproject.toml
docs/: MIGRATION_REPORT.md  SCHEMA_DESIGN.md
docs/checklists/: PRD-0002.md  PRD-0003.md  PRD-0004.md  PRD-0005.md
docs/mockups/: prd-0001-as-is-to-be.html  prd-0001-layer-architecture.html  prd-0001-project-structure.html  prd-0001-roadmap.html  prd-0003-migration-flow.html  prd-0003-model-comparison.html  prd-0003-sourcetype-mapping.html  prd-0004-broadcast-manager.html  prd-0004-db-operator.html  prd-0004-external-partners.html  prd-0004-production-team.html  prd-0004-system-architecture.html  prd-0005-3app-architecture.html  prd-0005-architecture.html  prd-0005-as-is-to-be.html  prd-0005-data-flow-3app.html  prd-0005-data-flow.html  prd-0005-network-topology.html  prd-0005-operator-dashboard.html  prd-0005-screen-flow.html  prd-0005-workflow.html
docs/schedules/: MVP-SCHEDULE-2026-02-15.md
monitor/: __init__.py  main.py
schemas/: registry.json
schemas/migrations/: CHANGELOG.md
scripts/: apply-schema.mjs  init-db.sql
shared/: __init__.py
shared/db/: __init__.py  connection.py  repositories.py
shared/models/: __init__.py  hand.py  render_instruction.py  tournament.py
shared/validators/: __init__.py  schema_validator.py
supabase/: config.toml
supabase/migrations/: 20250108000000_initial_schema.sql  20250108100000_add_gfx_tables.sql
tasks/prds/: PRD-0001-automation-hub-v2.md  (+6 more)
tests/: test_models.py
(+10 files in other folders)
